--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 PORT = 3000
-MONGO_URI=mongodb://localhost:27017/loginRegister
+NODE_ENV=development
 JWT_SECRET=loginRegister
+MONGO_URI=mongodb://localhost:27017/loginRegister
+
